--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-.card{
+/* CARD COLUMN SECTION */
+.card {
   width: calc(100% / 3 - 40px );
- margin: 0 20px;
+  margin: 0 20px;
+}
+
+.btm-card {
+  width: 100%;
+}
+
+/* /CARD COLUMN SECTION */
+
+
+/* SPONSOR SECTION */
+.partner-box{
+  width: 20%;
+ 
+}
+.sponsor-top div{
+  display: inline-block;
+}
+.partner-description-box{
+  width: 40%;
 }
