--- a/global.css
+++ b/global.css
@@ -1,14 +1,18 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 
-a{
+a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
