--- a/utilities.css
+++ b/utilities.css
@@ -28,18 +28,16 @@
 }
 
 .hw50{
-  height: 50px;
-  width: 50px;
+  height: 10vw;
+  width: 10vw;
 }
 
 .hw100{
   height: 100px;
-  width: calc(100% / 5)
 }
 
 .h100 {
   min-height: 100px;
-  
 }
 
 .h300 {
