--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+.menu li:hover{
+  border-bottom: 2px solid black;
+}
+
+/* HEADER MENU LEFT */
+
+.menu.left li:first-of-type {
+  padding-left: 10px;
+}
+
+.menu li{
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 30px;
+}
+
+/* /HEADER MENU LEFT */
+
+/* HEADER MENU RIGHT */
+.menu.right {
+  float: right;
+}
+
+.menu.right ul li:last-of-type a:nth-last-of-type(1){
+  color: white;
+  background-color:rgb(0, 97, 255) ;
+  padding: 5px 15px;
+}
+/* /HEADER MENU RIGHT */
+
+
 /* CARD COLUMN SECTION */
 .card {
   width: calc(100% / 3 - 40px );
@@ -24,7 +55,7 @@
 
 
 /* FOOTER */
-nav{
+.footernav{
   width: calc(100% / 5 - 40px);
   margin: 0 20px;
 }
