--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 .menu li:hover{
   border-bottom: 2px solid black;
 }
+.menubox {
+  height: 70px;
+  width: 50%;
+  line-height: 70px;
+}
 
 /* HEADER MENU LEFT */
 
@@ -13,7 +18,6 @@
   display: inline-block;
   margin-right: 30px;
 }
-
 /* /HEADER MENU LEFT */
 
 /* HEADER MENU RIGHT */
@@ -28,6 +32,47 @@
 }
 /* /HEADER MENU RIGHT */
 
+
+/* JUMBOTRON */
+.jumbotron {
+  background-color:rgb(180, 208, 231) ;
+}
+
+.containersml h1 {
+  font-size: 3.5rem;
+  padding:50px 0px 30px 0px ;
+  text-align: left;
+}
+
+.jumbotext p {
+  line-height: 20px;
+  font-size: 1rem;
+}
+
+.button {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.jumbotext p:last-of-type {
+  font-size: 13px;
+}
+
+.fa-arrow-down{
+  padding-top: 30px;
+  font-size: 2rem;
+  color: black;
+ }
+.jumboimg {
+  padding-left: 30px;
+  width: 70%;
+}
+.jumboimg img {
+  width:calc(100%);
+}
+
+
+/* /JUMBOTRON */
 
 /* CARD COLUMN SECTION */
 .card {
