--- a/utilities.css
+++ b/utilities.css
@@ -2,11 +2,16 @@
 .float-left {
   float: left;
 }
-
+/* BLUE BUTTON */
+.button a{
+  color: white;
+  background-color:rgb(0, 97, 255) ;
+  padding: 5px 15px;
+}
 .w50 {
   height: 70px;
   width: 50%;
-  line-height: 70px;
+  /* line-height: 70px; */
 }
 
 .text-right {
@@ -16,6 +21,7 @@
 .containersml {
   width: 80%;
   margin: 0 auto;
+  overflow: visible;
 }
 
 .clearfix::after {
