--- a/style.css
+++ b/style.css
@@ -49,9 +49,12 @@
   font-size: 1rem;
 }
 
-.button {
-  padding-top: 20px;
-  padding-bottom: 10px;
+.jumbo.button {
+  margin: 30px 0;
+}
+
+.jumbo.button a {
+  padding:10px 20px 10px 20px;
 }
 
 .jumbotext p:last-of-type {
@@ -70,17 +73,137 @@
 .jumboimg img {
   width:calc(100%);
 }
-
-
 /* /JUMBOTRON */
 
 /* CARD COLUMN SECTION */
+
+
+
+ .plan h2 {
+  font-size: 2em;
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
+
+.circle {
+  display: inline-block;
+  background-color: white;
+  border:1px solid lightgray;    
+  height:15px;
+  width:15px;
+  border-radius:50%;
+}
+.circle.blueborder {
+  border:4px solid rgb(0, 97, 255);    
+}
+
+.radiobuttons {
+  padding-bottom: 30px;
+  padding-left: 30px;
+}
 .card {
   width: calc(100% / 3 - 40px );
   margin: 0 20px;
+  border: 1px solid lightgray;
+}
+.btm-card {
+  margin-top: 40px;
+  border: 1px solid lightgray;
+}
+.plan p{
+  padding-right: 15px;
+  display: inline-block;
+}
+
+.plan-kind {
+  text-align: center;
+  border-bottom: 1px solid lightgray;
+  padding: 10px;
+}
+.card ul {
+  padding: 30px;
+}
+.top.list h2 {
+  padding-left: 0px;
+  font-size: 1.5em;
+}
+
+
+.top.list ul li:nth-child(2){
+  font-weight: bold;
+  font-size: 13px;
+  padding-bottom: 5px;
+}
+
+.top.list li:nth-child(3){
+  padding-bottom: 15px;
+  color: lightgray;
+  font-size: 10px;
+}
+
+ .top.list li:nth-last-child(-n+3){
+  padding-bottom: 20px;
+  font-size: 12px;
+}
+
+.card span {
+  padding: 30px;
+}
+
+.greyline {
+  width: 40px;
+  border-bottom: 1px solid lightgray;
+  margin-left: 30px;
+  padding-top: 20px;
+}
+.btm.list {
+  padding-bottom: 200px;
+}
+.btm.list i {
+  padding-right: 5px;
+  color:rgb(0, 97, 255) ;
+}
+
+.btm.list li {
+  padding: 10px;
+}
+
+/* BOTTONE CARD */
+
+.free-trial {
+  padding-bottom: 30px;
+  text-align: center;
+}
+.free-trial a {
+  padding: 5px 30px 5px 30px;
+  
+}
+/* /BOTTONE CARD */
+.card span {
+  font-size: 12px;
+}
+.card span a {
+  color:rgb(0, 97, 255) ;
+  text-decoration: underline;
+}
+
+/* BOTTOM CARD */
+.float-right {
+  margin: 40px 15px 0 0;
+}
+.float-right a {
+  padding: 5px 15px;
+}
+.btm-card li h2 {
+  padding-top: 30px;
+}
+.btm-card li p{
+  padding-left: 30px;
+  margin-bottom: 30px;
 }
 
 .btm-card {
+  margin-bottom: 40px;
   width: 100%;
 }
 /* /CARD COLUMN SECTION */
