--- a/utilities.css
+++ b/utilities.css
@@ -2,11 +2,14 @@
 .float-left {
   float: left;
 }
+.float-right{
+  float: right;
+}
 /* BLUE BUTTON */
 .button a{
   color: white;
   background-color:rgb(0, 97, 255) ;
-  padding: 5px 15px;
+  
 }
 .w50 {
   height: 70px;
@@ -19,6 +22,7 @@
 }
 
 .containersml {
+  padding-top: 100px;
   width: 80%;
   margin: 0 auto;
   overflow: visible;
