--- a/style.css
+++ b/style.css
@@ -270,13 +270,10 @@ header {
   padding-bottom: 10px;
 }
 
-
-
-
 /* /OPERATIONS */
 
-/* SPONSOR SECTION */
 .end.title {
+  padding-bottom: 30px;
   padding-top: 30px;
 }
 
@@ -286,19 +283,116 @@ header {
 }
 
 .end.title a {
+  text-decoration: underline;
   color:rgb(4, 99, 255) ;
 }
 
+/* SPONSOR SECTION */
 .sponsor-box{
-  width: 20vw;
-  height: 20vw;
+  width: 30vw;
+  height: 30vw;
+}
+
+.blockimage {
+  position: relative;
+
+}
+.blockimage img {
+  filter: invert(100%);
+  padding: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+}
+/* SPONSOR SQUARES */
+ #design {
+  background-color: rgb(162, 211, 155);
+}
+
+#uni {
+  background-color: rgb(97, 8, 43);
+}
+
+#floridauni {
+  background-color: rgb(0, 147, 206);
+}
+
+#topps {
+  background-color: rgb(255, 28, 28);
+}
+
+#wbr {
+  background-color: rgb(213, 0, 31);
+}
+
+#hearst {
+  background-color: rgb(180, 208, 231);
+}
+
+#lonely-planet {
+  background-color: rgb(13, 36, 129);
+}
+
+#cco {
+  background-color: rgb(255, 216, 48);
+}
+
+.active:active{
+  border: 5px solid rgba(255,255,255, 0.2);
+}
+
+/* /SPONSOR SQUARES */
+
+/* SPONSOR DESCRIPTION */
+
+.designitlogo {
+  float: left;
+  padding: 40px 0 40px 40px;
+  width: 30%;
+}
+.designitlogo img {
+  width: 100%;
+}
+.grey-line {
+  width: 40px;
+  border-bottom: 1px solid lightgray;
+  padding-top: 25px;
 }
 
 .sponsor-description-box{
-  width: calc(100% - 40vw);
-  height: 20vw;
+  background-color: rgb(245, 245, 245);
+  width: calc(100% - 60vw);
+  height: 30vw;
+}
+
+.sponsor-description-box p {
+  padding:0px 30px 40px 40px;
+}
+
+.sponsor-description-box p:last-of-type {
+  margin-bottom: 200px;
+}
+
+
+.sponsor-btm {
+  background-color: rgb(180, 208, 231);
+}
+.sponsor-btm h2 {
+  padding-bottom: 100px;
+  padding-right: 300px;
+  font-size: 2.5rem;
+  color: rgb(97, 8, 43);
+}
+
+.sponsor-btm .btn a {
+  border: none;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 /* /SPONSOR SECTION */
+
 
 
 /* FOOTER */
