--- a/utilities.css
+++ b/utilities.css
@@ -15,6 +15,7 @@
   color: black;
   border: 1px solid black;
   padding: 5px 20px;
+  background-color: white;
 }
 
 .w50 {
@@ -43,8 +44,8 @@
 }
 
 .hw50{
-  height: 10vw;
-  width: 10vw;
+  height: 15vw;
+  width: 15vw;
 }
 
 .hw100{
