--- a/style.css
+++ b/style.css
@@ -11,11 +11,9 @@ header {
 
 .menu.left li:nth-last-child(-n+3):hover{
   border-bottom: 2px solid black;
-
 }
 .menu.right li:nth-child(-n+3):hover{
   border-bottom: 2px solid black;
-
 }
 .menubox {
   height: 70px;
@@ -91,7 +89,7 @@ header {
   padding-top: 30px;
   font-size: 2rem;
   color: black;
- }
+}
 .jumboimg {
   padding-left: 30px;
   width: 70%;
@@ -220,7 +218,7 @@ header {
 
 
 /* BOTTOM CARD */
-.float-right {
+.float-right.button {
   margin: 40px 15px 0 0;
 }
 .float-right a {
@@ -320,8 +318,8 @@ header {
 
 .blockimage {
   position: relative;
-
 }
+
 .blockimage img {
   filter: invert(100%);
   padding: 30px;
@@ -396,10 +394,6 @@ header {
   padding:0px 30px 40px 40px;
 }
 
-.sponsor-description-box p:last-of-type {
-  margin-bottom: 200px;
-}
-
 
 .sponsor-btm {
   background-color: rgb(180, 208, 231);
@@ -422,6 +416,29 @@ header {
 }
 /* /SPONSOR SECTION */
 
+/* FAQ */
+
+.faq h2 {
+  padding-bottom: 30px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.question h4 {
+  padding-top: 20px;
+}
+
+
+.question.text {
+  padding-bottom: 20px;
+  border-bottom: 1px solid lightgrey;
+  position: relative;
+}
+
+.question.text i {
+  position: absolute;
+  right: 0;
+  top: 20px;
+}
 
 
 /* FOOTER */
