--- a/style.css
+++ b/style.css
@@ -103,8 +103,7 @@ header {
 /* CARD COLUMN SECTION */
 
  .plan h2 {
-  font-size: 2em;
-  padding-left: 30px;
+  font-size: 2.5em;
   padding-bottom: 30px;
 }
 /* FAKE RADIO BUTTONS */
@@ -122,7 +121,6 @@ header {
 
 .radiobuttons {
   padding-bottom: 30px;
-  padding-left: 30px;
 }
 /*/ FAKE RADIO BUTTONS */
 
@@ -164,14 +162,19 @@ header {
 
 .top.list li:nth-child(3){
   padding-top: 5px;
-  padding-bottom: 15px;
+  padding-bottom: 40px;
   color: gray;
   font-size: 10px;
 }
 
 .top.list li:nth-last-child(-n+3){
+  margin-left: 17px;
   padding-bottom: 20px;
   font-size: 12px;
+}
+.top.list li:nth-last-child(-n+3) i {
+  margin: -17px;
+  padding-right: 20px;
 }
 
 
@@ -200,7 +203,7 @@ header {
   text-align: center;
 }
 .free-trial a {
-  padding: 5px 30px 5px 30px;
+  padding: 5px 60px 5px 60px;
 }
 .free-trial a:hover {
   opacity: 0.8;
@@ -222,7 +225,7 @@ header {
   margin: 40px 15px 0 0;
 }
 .float-right a {
-  padding: 5px 15px;
+  padding: 5px 60px;
 }
 
 .float-right a:hover {
@@ -230,6 +233,7 @@ header {
 }
 
 .btm-card li h2 {
+  padding-left: 30px;
   padding-top: 30px;
 }
 .btm-card li p{
@@ -438,6 +442,10 @@ header {
   position: absolute;
   right: 0;
   top: 20px;
+}
+
+.faq {
+  padding-bottom: 100px;
 }
 
 
