--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
   border-bottom: 2px solid black;
 }
 .menubox {
-  height: 70px;
+  min-height: 72px;
   width: 50%;
   line-height: 70px;
 }
@@ -26,12 +26,12 @@ header {
 
 .menu.left li:first-of-type {
   padding-left: 10px;
-  vertical-align: middle;
 }
 
+
 .menu li{
+  float: left;
   cursor: pointer;
-  display: inline-block;
   margin-right: 30px;
 }
 /* /HEADER MENU LEFT */
@@ -108,12 +108,12 @@ header {
 }
 /* FAKE RADIO BUTTONS */
 .circle {
-  display: inline-block;
   background-color: white;
   border:1px solid lightgray;    
   height:15px;
   width:15px;
   border-radius:50%;
+  margin-right: 4px;
 }
 .circle.blueborder {
   border:4px solid rgb(0, 97, 255);    
@@ -128,7 +128,7 @@ header {
 .card {
   width: calc(100% / 3 - 40px );
   border: 1px solid lightgray;
-  height: 965px;
+  min-height: 965px;
 }
 
 .col.center {
@@ -139,8 +139,8 @@ header {
   border: 1px solid lightgray;
 }
 .plan p{
+  float: left;
   padding-right: 15px;
-  display: inline-block;
 }
 
 .plan-kind {
@@ -499,17 +499,25 @@ hr {
   margin-bottom: 30px;
 }
 
-.footercol i {
+.footercol .world{
+  float: left;
   color: lightgrey;
+  vertical-align: middle;
+  line-height: 50px;
 }
 
 .footercol p {
+  float: left;
   padding:2px;
-  display: inline-block;
   color: lightgray;
+  vertical-align: middle;
+  line-height: 50px;
 }
 
 .arrow {
-  vertical-align: sub;
+  float: left;
+  color: lightgrey;
+  vertical-align: middle;
+  line-height: 64px;
 }
 /* /FOOTER */
